# Model-Prog

./: CMakeLists.txt  CompteRendu.tex  README.txt
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  Dvector.cpp  Dvector.h  GerstnerWave.cpp  GerstnerWave.h  Height.cpp  Height.h  Ocean.cpp  Ocean.h  PhilipsWaveModel.cpp  PhilipsWaveModel.h  WaveModel.cpp  WaveModel.h  a.out  main.cpp
test/: main.cpp
tests/: CMakeLists.txt  test_gtest.cxx  test_gtest_class.cxx  test_gtest_waves.cxx  yolo.txt
visu/: CMakeLists.txt  gl_defs.hxx  main.cxx  window.cxx  window.hxx
